--- a/.github/workflows/IPTV AutoSync Workflow.yml
+++ b/.github/workflows/IPTV AutoSync Workflow.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: master  # 明确指定master分支‌:ml-citation{ref="1" data="citationList"}
+          ref: main  # 明确指定master分支‌:ml-citation{ref="1" data="citationList"}
 
       # 步骤2：创建下载目录
       - name: Create download directory
@@ -169,7 +169,7 @@ jobs:
             git add -A
             git commit -m "📡 AutoSync IPTV Sources [$(date +'%Y-%m-%d %H:%M UTC')]"
             # 强制推送确保同步‌:ml-citation{ref="1,3" data="citationList"}
-            git push origin master
+            git push origin main
           fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # 确保令牌有效‌:ml-citation{ref="1,6" data="citationList"}
