--- a/.github/workflows/wwkejishe AutoSync Download Workflow.yml
+++ b/.github/workflows/wwkejishe AutoSync Download Workflow.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: Process files
       run: |
-       find Download -type f -name "*.m3u8" -exec sed -i -E \
+       find Download -type f -name "*.m3u" -exec sed -i -E \
        -e 's/^(#EXTINF:-1 group-title="([^"]+)"),([^\n]+)/#EXTINF:-1 group-title="\2" tvg-name="\3" tvg-logo="https:\/\/live.fanmingming.cn\/tv\/\3.png",\3/' \
        -e 's/\$.*$//' {} +
 
