--- a/.github/workflows/IPTV AutoSync Workflow.yml
+++ b/.github/workflows/IPTV AutoSync Workflow.yml
@@ -28,6 +28,7 @@ jobs:
         run: |
           wget -q -O Download/iptv-api.txt https://raw.githubusercontent.com/Guovin/iptv-api/gd/output/result.txt
           wget -q -O Download/wwkejishe.m3u https://iptv.wwkejishe.top/ALL.m3u
+          wget -q -O Download/iptv-org.m3u https://raw.githubusercontent.com/iptv-org/iptv/master/streams/cn.m3u
           wget -q -O Download/wwkjtv.m3u https://iptv.wwkejishe.top/tv.m3u
           wget -q -O Download/wwkjSub.m3u https://iptv.wwkejishe.top/Sub.m3u
           wget -q -O Download/CCTV.m3u https://raw.githubusercontent.com/Moexin/IPTV/Files/CCTV.m3u
