--- a/.github/workflows/IPTV AutoSync Workflow.yml
+++ b/.github/workflows/IPTV AutoSync Workflow.yml
@@ -39,12 +39,13 @@ jobs:
       # 步骤4：批量替换文件内容
       - name: Process files
         run: |
-          find Download -type f -exec sed -i \
+          
+           find Download -type f -exec sed -i \
             -e 's/CCTV2/CCTV-2 财经/g' \
             -e 's/CCTV3/CCTV-3 综艺/g' \
             -e 's/CCTV4/CCTV-4 中文国际/g' \
             -e 's/CCTV5/CCTV-5 体育/g' \
-            -e 's/CCTV5+/CCTV-5+ 体育赛事/g' \
+            -e 's/CCTV5\+/CCTV-5+ 体育赛事/g' \
             -e 's/CCTV6/CCTV-6 电影/g' \
             -e 's/CCTV7/CCTV-7 国防军事/g' \
             -e 's/CCTV8/CCTV-8 电视剧/g' \
@@ -57,24 +58,6 @@ jobs:
             -e 's/CCTV15/CCTV-15 音乐/g' \
             -e 's/CCTV16/CCTV-16 奥林匹克/g' \
             -e 's/CCTV17/CCTV-17 农业农村/g' \
-            -e 's/CCTV-2/CCTV-2 财经/g' \
-            -e 's/CCTV-3/CCTV-3 综艺/g' \
-            -e 's/CCTV-4/CCTV-4 中文国际/g' \
-            -e 's/CCTV-5/CCTV-5 体育/g' \
-            -e 's/CCTV-5+/CCTV-5+ 体育赛事/g' \
-            -e 's/CCTV-6/CCTV-6 电影/g' \
-            -e 's/CCTV-7/CCTV-7 国防军事/g' \
-            -e 's/CCTV-8/CCTV-8 电视剧/g' \
-            -e 's/CCTV-9/CCTV-9 纪录/g' \
-            -e 's/CCTV-10/CCTV-10 科教/g' \
-            -e 's/CCTV-11/CCTV-11 戏曲/g' \
-            -e 's/CCTV-12/CCTV-12 社会与法/g' \
-            -e 's/CCTV-13/CCTV-13 新闻/g' \
-            -e 's/CCTV-14/CCTV-14 少儿/g' \
-            -e 's/CCTV-15/CCTV-15 音乐/g' \
-            -e 's/CCTV-16/CCTV-16 奥林匹克/g' \
-            -e 's/CCTV-17/CCTV-17 农业农村/g' \
-            -e 's/CCTV-1综合/CCTV-1 综合/g' \
             -e 's/CCTV-2财经/CCTV-2 财经/g' \
             -e 's/CCTV-3综艺/CCTV-3 综艺/g' \
             -e 's/CCTV-4中文国际/CCTV-4 中文国际/g' \
@@ -92,24 +75,8 @@ jobs:
             -e 's/CCTV-15音乐/CCTV-15 音乐/g' \
             -e 's/CCTV-16奥林匹克/CCTV-16 奥林匹克/g' \
             -e 's/CCTV-17农业农村/CCTV-17 农业农村/g' \
-            -e 's/CCTV1 综合/CCTV-1 综合//g' \
-            -e 's/CCTV2 财经/CCTV-2 财经//g' \
-            -e 's/CCTV3 综艺/CCTV-3 综艺/g' \
-            -e 's/CCTV4 中文国际/CCTV-4 中文国际/g' \
-            -e 's/CCTV5 体育/CCTV-5 体育/g' \
-            -e 's/CCTV5+ 体育赛事/CCTV-5+ 体育赛事/g' \
-            -e 's/CCTV6 电影/CCTV-6 电影/g' \
-            -e 's/CCTV7 国防军事/CCTV-7 国防军事/g' \
-            -e 's/CCTV8 电视剧/CCTV-8 电视剧/g' \
-            -e 's/CCTV9 纪录/CCTV-9 纪录/g' \
-            -e 's/CCTV10 科教/CCTV-10 科教/g' \
-            -e 's/CCTV11 戏曲/CCTV-11 戏曲/g' \
-            -e 's/CCTV12 社会与法/CCTV-12 社会与法/g' \
-            -e 's/CCTV13 新闻/CCTV-13 新闻/g' \
-            -e 's/CCTV14 少儿/CCTV-14 少儿/g' \
-            -e 's/CCTV15 音乐/CCTV-15 音乐/g' \
-            -e 's/CCTV16 奥林匹克/CCTV-16 奥林匹克/g' \
-            -e 's/CCTV17 农业农村/CCTV-17 农业农村/g' \
+            -e 's/CCTV1 综合/CCTV-1 综合/g' \
+            -e 's/CCTV2 财经/CCTV-2 财经/g' \
             -e 's/CGTN记录/CGTN纪录/g' \
             -e 's/BRTV北京卫视/北京卫视/g' \
             -e 's/BRTV卡酷少儿/卡酷少儿/g' \
@@ -118,23 +85,10 @@ jobs:
             -e 's/福建海峡卫视/海峡卫视/g' \
             -e 's/福建体育/福建文体/g' \
             -e 's/福建体育频道/福建文体/g' \
-            -e 's/NewTV爱情喜剧/爱情喜剧/g' \
             -e 's/NewTV超级电视剧/超级电视剧/g' \
             -e 's/NewTV超级电影/超级电影/g' \
             -e 's/NewTV超级体育/超级体育/g' \
             -e 's/NewTV超级综艺/超级综艺/g' \
-            -e 's/NewTV潮妈辣婆/潮妈辣婆/g' \
-            -e 's/NewTV东北热剧/东北热剧/g' \
-            -e 's/NewTV动作电影/动作电影/g' \
-            -e 's/NewTV古装剧场/古装剧场/g' \
-            -e 's/NewTV欢乐剧场/欢乐剧场/g' \
-            -e 's/NewTV家庭剧场/家庭剧场/g' \
-            -e 's/NewTV金牌综艺/金牌综艺/g' \
-            -e 's/NewTV惊悚悬疑/惊悚悬疑/g' \
-            -e 's/NewTV精品大剧/精品大剧/g' \
-            -e 's/NewTV精品纪录/精品纪录/g' \
-            -e 's/NewTV精品萌宠/精品萌宠/g' \
-            -e 's/NewTV精品体育/精品体育/g' \
             -e 's/SiTV动漫秀场/动漫秀场/g' \
             -e 's/SiTV都市剧场/都市剧场/g' \
             -e 's/SiTV法治天地/法治天地/g' \
