--- a/.github/workflows/IPTV AutoSync Workflow.yml
+++ b/.github/workflows/IPTV AutoSync Workflow.yml
@@ -181,6 +181,24 @@ jobs:
             -e 's/iHOT爱科学/爱科学/g' \
             -e 's/iHOT爱旅行/爱旅行/g' \
             -e 's/iHOT爱体育/爱体育/g' \
+            -e 's/,CCTV2/,CCTV-2 财经/g' \
+            -e 's/,CCTV3/,CCTV-3 综艺/g' \
+            -e 's/,CCTV4/,CCTV-4 中文国际/g' \
+            -e 's/,CCTV5/,CCTV-5 体育/g' \
+            -e 's/,CCTV5+/,CCTV-5+ 体育赛事/g' \
+            -e 's/,CCTV6/,CCTV-6 电影/g' \
+            -e 's/,CCTV7/,CCTV-7 国防军事/g' \
+            -e 's/,CCTV8/,CCTV-8 电视剧/g' \
+            -e 's/,CCTV9/,CCTV-9 纪录/g' \
+            -e 's/,CCTV10/,CCTV-10 科教/g' \
+            -e 's/,CCTV11/,CCTV-11 戏曲/g' \
+            -e 's/,CCTV12/,CCTV-12 社会与法/g' \
+            -e 's/,CCTV13/,CCTV-13 新闻/g' \
+            -e 's/,CCTV14/,CCTV-14 少儿/g' \
+            -e 's/,CCTV15/,CCTV-15 音乐/g' \
+            -e 's/,CCTV16/,CCTV-16 奥林匹克/g' \
+            -e 's/,CCTV17/,CCTV-17 农业农村/g' \
+            -e 's/,CCTV1/,CCTV-1 综合/g' \
             {} +
   
       # 步骤4：批量替换文件内容
