--- a/.github/workflows/IPTV Download.yml
+++ b/.github/workflows/IPTV Download.yml
@@ -27,6 +27,9 @@ jobs:
           wget -q -O Download/iptv-org.m3u https://iptv-org.github.io/iptv/countries/cn.m3u
           wget -q -O Download/CCTV.m3u https://raw.githubusercontent.com/Moexin/IPTV/Files/CCTV.m3u
           wget -q -O Download/l.txt https://raw.githubusercontent.com/asdjkl6/tv/tv/.m3u/整套直播源/测试/整套直播源/l.txt
+          wget -q -O Download/vbskycn_iptv6.txt https://raw.githubusercontent.com/vbskycn/iptv/master/tv/iptv6.txt
+          wget -q -O Download/alienlu.txt https://raw.githubusercontent.com/alienlu/iptv/refs/heads/master/iptv.txt
+          wget -q -O Download/allinone.m3u https://fn.sunweijun.top:35455/tv.m3u
 
       - name: Process files
         run: |
