--- a/.github/workflows/IPTV Download.yml
+++ b/.github/workflows/IPTV Download.yml
@@ -43,6 +43,7 @@ jobs:
          -e "s/CCTV-$[0-9]\+$[ 　]*[^,]*/CCTV\1/g" \
          -e "s/cctv[-_]\\?$[0-9]\\+$[-_]\\?BPTV/CCTV\1/gi" \
          -e "s/[Cc][Cc][Tt][Vv][-_]\\?$[0-9]\\+$[-+_ ].*/CCTV\1/g" \
+         -e "s/(#EXTINF.*tvg-name=\"[^\"]*\",)CCTV-(0-9]+)[ 　]*[^,]*/\\1CCTV\\2/g;
          -e "s/BRTV北京卫视/北京卫视/g" \
          -e "s/BRTV卡酷少儿/卡酷少儿/g" \
          -e "s/BRTV纪实科教/纪实科教/g" \
