--- a/.github/workflows/IPTV Download.yml
+++ b/.github/workflows/IPTV Download.yml
@@ -39,11 +39,10 @@ jobs:
         shell: bash
         run: |
          find Download -type f -exec bash -c '
-         sed -i \
-         -e "s/CCTV-$[0-9]\+$[ 　]*[^,]*/CCTV\1/g" \
-         -e "s/cctv[-_]\\?$[0-9]\\+$[-_]\\?BPTV/CCTV\1/gi" \
-         -e "s/[Cc][Cc][Tt][Vv][-_]\\?$[0-9]\\+$[-+_ ].*/CCTV\1/g" \
-         -e "s/(#EXTINF.*tvg-name=\"[^\"]*\",)CCTV-(0-9]+)[ 　]*[^,]*/\\1CCTV\\2/g;
+         sed -i -E \
+         -e "s/(,)(CCTV-)([0-9]+)([ 　]+[^,]*)/\1CCTV\3/g" \
+         -e "s/cctv[-_]?([0-9]+)[-_]?BPTV/CCTV\1/gi" \
+         -e "s/[Cc][Cc][Tt][Vv][-_]?([0-9]+)[-+_ ].*/CCTV\1/g" \
          -e "s/BRTV北京卫视/北京卫视/g" \
          -e "s/BRTV卡酷少儿/卡酷少儿/g" \
          -e "s/BRTV纪实科教/纪实科教/g" \
@@ -51,13 +50,14 @@ jobs:
          -e "s/NewTV超级电影/超级电影/g" \
          -e "s/NewTV超级体育/超级体育/g" \
          -e "s/NewTV超级综艺/超级综艺/g" \
-         -e "s/SiTV$[^ ]*$/\1/g" \
-         -e "s/iHOT爱$[^ ]*$/爱\1/g" \
+         -e "s/SiTV([^ ]*)/\1/g" \
+         -e "s/iHOT爱([^ ]*)/爱\1/g" \
          -e "s/上海东方卫视/东方卫视/g" \
          -e "s/福建体育频道/福建文体/g" \
          -e "s/CGTN记录/CGTN纪录/g" \
          "$1"
          ' _ {} \;
+
 
       - name: Commit changes
         run: |
